--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,32 +13,57 @@
   scroll-behavior: smooth;
 }
 
+/* new preloader */
+
 #preloader {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(255, 255, 255);
-  display: flex;
-  justify-content: center;
-  align-items: center;
   z-index: 9999;
-  transition: opacity 0.3s ease;
+  background-color: #fff;
+  transition: opacity 0.5s ease;
 }
 
-#loader {
-  border: 8px solid #f3f3f3;
-  border-top: 8px solid #ff771d;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 1s linear infinite;
+.preloader-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff; /* Change this to match your background color */
+  opacity: 0.9;
+  z-index: -1;
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+.preloader-logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.preloader-logo img {
+  width: 150px; /* Adjust this to match your logo size */
+  height: auto;
+  animation: pulse 1.5s infinite;
+  border-radius: 50%; /* Ensure the logo container is circular */
+}
+
+@keyframes pulse {
+  0% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba(41, 24, 138, 0.2);
+  }
+  70% {
+      transform: scale(1);
+      box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+  }
+  100% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
 }
 
 body {
@@ -48,12 +73,12 @@ body {
 }
 
 a {
-  color: #FC6736;
+  color: #4154f1;
   text-decoration: none;
 }
 
 a:hover {
-  color: #ca3300;
+  color: #939dff;
   text-decoration: none;
 }
 
@@ -796,9 +821,9 @@ h6 {
   align-items: center;
   font-size: 15px;
   font-weight: 600;
-  color: #FC6736;
+  color: #383996;
   transition: 0.3;
-  background: #ffeae3;
+  background: #f6f9ff;
   padding: 10px 15px;
   border-radius: 4px;
 }
@@ -806,7 +831,7 @@ h6 {
 .sidebar-nav .nav-link i {
   font-size: 16px;
   margin-right: 10px;
-  color: #FC6736;
+  color: #383996;
 }
 
 .sidebar-nav .nav-link.collapsed {
@@ -819,12 +844,12 @@ h6 {
 }
 
 .sidebar-nav .nav-link:hover {
-  color: #FC6736;
+  color: #3d40ff;
   background: #f6f9ff;
 }
 
 .sidebar-nav .nav-link:hover i {
-  color: #FC6736;
+  color: #3d40ff;
 }
 
 .sidebar-nav .nav-link .bi-chevron-down {
